name:           Phaestus
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Kelly Martin <kmartin@quivern.com>
synopsis:       PHP parser
homepage:       https://github.com/ab9rf/phaestus
category:       Language
copyright:      2013-2015 Kelly Martin <kmartin@quivern.com>
stability:      experimental
maintainer:     Kelly Martin <kmartin@quivern.com>

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4 && < 5,
                   array,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:   ParseTree

executable Phaestus
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4 && < 5,
                   array,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:   ParseTree

