name:           Phaestus
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         Kelly Martin <kmartin@quivern.com>
synopsis:       PHP parser
homepage:       https://github.com/ab9rf/phaestus
category:       Language
copyright:      2013-2015 Kelly Martin <kmartin@quivern.com>
stability:      experimental
maintainer:     Kelly Martin <kmartin@quivern.com>
description:    Parser for PHP.
license:        OtherLicense
extra-source-files:  test/main.hs
license-file:   COPYING

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4 && < 5,
                   array,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:   
                   Main,
                   AST
  exposed-modules: 
                   Parser,
                   Tokenizer

executable Phaestus
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4 && < 5,
                   array,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:   
                   Parser,
                   AST

test-suite test
    hs-source-dirs: src/test
    main-is: main.hs
    type: exitcode-stdio-1.0
    build-depends:  
                    Phaestus,
                    base,
                    QuickCheck,
                    hspec
    
source-repository head
  type:     git
  location: git://github.com/ab9rf/phaestus.git
