name:           Phaestus
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         Kelly Kinkade <kmartin@pyrzqxgl.org>
synopsis:       PHP parser
homepage:       https://github.com/ab9rf/phaestus
category:       Language
copyright:      2013-2018 Kelly Kinkade <kmartin@pyrzqxgl.org>
stability:      experimental
maintainer:     Kelly Kinkade <kmartin@pyrzqxgl.org>
description:    Parser for PHP.
license:        OtherLicense
license-file:   COPYING

library
  hs-source-dirs:  src
  build-depends:
                   base >= 4 && < 5,
                   array,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:   Main
  exposed-modules:
                   AST,
                   Parser,
                   Tokenizer

executable Phaestus
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4 && < 5,
                   array,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:
                   Parser,
                   AST,
                   Tokenizer

test-suite test
    hs-source-dirs: src/test
    main-is: main.hs
    type: exitcode-stdio-1.0
    build-depends:
                    Phaestus,
                    base,
                    QuickCheck,
                    hspec
    other-modules:
                    ParserSpec,
                    TokenizerSpec

source-repository head
  type:     git
  location: git://github.com/ab9rf/phaestus.git
